[project]
name = "TAER_Add_Ons"
version = "0.0.1"
description = "App for test AER based sensors."
authors = [
    {name = "Rafael de la Rosa", email = "rafodelarosa.og@gmail.com"},
    {name = "Ruben Gomez Merchan", email = "rgmerchan@us.es"},
]
dependencies = [
    "TAER_Core"
]
requires-python = ">=3.10.5"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["src/TAER_Add_Ons/chip_configs", "src/TAER_Add_Ons/config"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]