[project]
name = "TAER_App"
version = "0.0.2"
description = "App for test AER based sensors."
authors = [
    {name = "Rafael de la Rosa", email = "rafodelarosa.og@gmail.com"},
    {name = "Ruben Gomez Merchan", email = "rgmerchan@us.es"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10.5"
dependencies = [
    "TAER-Core",
    "pyvisa-py",
    "PyUSB",
    "unit_parse",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["src/TAER_App/chip_configs", "src/TAER_App/config"]
